# polaris

./: .gitignore  .gitmodules  analyze.ipynb  claude_shell  dummy_eval_script.py  polaris.def  pyproject.toml  run_in_container.sh      
experiments/: eval_remote.py  run_classifier_guided_job.py
experiments/brc_eval/: README.md  generate_classifier_guided_sbatch.py  postprocess_classifier_guided_eval.py
notebooks/: classifier_gradient_guided_analysis.ipynb  classifier_guided_analysis.ipynb
runs/classifier_guided_jobs/bestofN_droidlangclsfr_polaris__posloss0.95_20260305_143227/: submit_classifier_guided_20260305_143227.sh
runs/classifier_guided_jobs/bestofN_droidlangclsfr_polaris__posloss0.95_20260305_144444/: submit_classifier_guided_20260305_144444.sh
runs/classifier_guided_jobs/bestofN_droidlangclsfr_polaris__posloss0.95_debug_20260305_183753/: submit_classifier_guided_20260305_183753.sh
runs/classifier_guided_jobs/dummy_20260304_205957/: dummy_20260304_205957_per_env.csv  dummy_20260304_205957_summary.json  submit_classifier_guided_20260304_205957.sh
runs/classifier_guided_jobs/loc_20260304_210417/: submit_classifier_guided_20260304_210417.sh
runs/classifier_guided_jobs/local_test_20260304_210403/: submit_classifier_guided_20260304_210403.sh
runs/polaris_droid_lang_classifier_step_2k_WITH_pi05_droid_polaris/DROID-BlockStackKitchen_20260302_213515/: eval_results.csv
runs/polaris_droid_lang_classifier_step_2k_WITH_pi05_droid_polaris/DROID-BlockStackKitchen_20260302_225830/: eval_results.csv
runs/polaris_droid_lang_classifier_step_2k_WITH_pi05_droid_polaris/DROID-FoodBussing_20260302_213544/: eval_results.csv
runs/polaris_droid_lang_classifier_step_2k_WITH_pi05_droid_polaris/DROID-MoveLatteCup_20260302_213757/: eval_results.csv
runs/polaris_droid_lang_classifier_step_2k_WITH_pi05_droid_polaris/DROID-OrganizeTools_20260302_213811/: eval_results.csv
scripts/: debug_eval_env.py  eval.py  run_classifier_guided_in_container.sh  run_sbatch.sh
src/polaris/: config.py
(+10 files in other folders)
